fix(QSlider): Enforce a minimum height for label to avoid gaps with arrow

--- a/ui/src/components/slider/QSlider.sass
+++ b/ui/src/components/slider/QSlider.sass
@@ -86,6 +86,7 @@
     white-space: nowrap
 
     &-text-container
+      min-height: 25px
       padding: 2px 8px
       border-radius: $generic-border-radius
       background: currentColor
